[package]
name = "kiwi"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures = "0.3.29"
rdkafka = { version = "0.34.0", features = ["cmake-build"] }
serde = "1.0.190"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = "0.20.1"
tracing = "0.1.40"
