[workspace]
members = ["src/kiwi", "src/kiwi-sdk"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80.0"
authors = ["Rohan Krishnaswamy <rohan@fastmail.us>"]
description = "Kiwi is a fast and extensible WebSocket gateway for real-time event sources"
repository = "https://github.com/rkrishn7/kiwi"
license = "MIT"
