[package]
name = "hook"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.73.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiwi-sdk = { path = "../../src/kiwi-sdk" }

[workspace]
