[package]
name = "kiwi-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "The Kiwi SDK allows you to write pluggable modules that hook into the Kiwi runtime."

[dependencies]
kiwi-macro = { path = "./macro" }
wit-bindgen = "0.16.0"
