[package]
name = "kiwi-sdk"
version = "0.1.1-alpha.7"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The Kiwi SDK allows you to write pluggable modules that hook into the Kiwi runtime."

[dependencies]
anyhow = "1.0.79"
kiwi-macro = { version = "~0.1.1-alpha.7", path = "./macro" }
wit-bindgen = "0.19.1"
http = "1.0.0"
