[package]
name = "kiwi"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
anyhow = "1.0.79"
base64 = "0.21.5"
clap = { version = "4.4.16", features = ["derive", "env"] }
futures = "0.3.29"
jwt = "0.16.0"
maplit = "1.0.2"
nanoid = "0.4.0"
once_cell = "1.19.0"
rdkafka = { version = "0.36.2", features = ["cmake-build", "tracing"] }
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.9"
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasmtime = { version = "18.0.2", features = ["component-model", "async"] }
wasmtime-wasi = "18.0.2"
wasmtime-wasi-http = "18.0.2"
wat = "1.209.1"
wit-component = "0.20.1"
ringbuf = "0.3.3"
async-stream = "0.3.5"
futures-util = "0.3.30"
http = "1.0.0"
notify = "6.1.1"
arc-swap = "1.7.0"
fastwebsockets = { version = "0.7.0", features = ["upgrade"] }
http-body-util = "0.1.1"
hyper = "1.2.0"
hyper-util = { version = "0.1.3", features = ["server", "http1", "http2"] }
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.1"
bytes = "1.5.0"

[dev-dependencies]
tempfile = "3"
nix = { version = "0.28.0", features = ["signal"] }
reqwest = "0.11.26"
hyper = "1.2.0"
hyper-util = "0.1.3"
bytes = "1.5.0"
