[package]
name = "kiwi-macro"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
wit-bindgen = "0.17.0"
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
