[package]
name = "kiwi-macro"
version = "0.1.1"
rust-version = "1.71.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Macros for the Kiwi SDK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
